--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ APP_SECRET=3b2603693188b0877c1c1510d4bd55ee
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://ydbu3020_prestige:AiEX-txg8da^@localhost:3336/ydbu3020_prestige?serverVersion=8&charset=utf8mb4"
-#DATABASE_URL="mysql://root:root@127.0.0.1:8889/prestige?serverVersion=8&charset=utf8mb4"
+#DATABASE_URL="mysql://ydbu3020_prestige:AiEX-txg8da^@localhost:3336/ydbu3020_prestige?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root:root@127.0.0.1:8889/prestige?serverVersion=8&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -40,5 +40,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 #MAILER_DSN=smtp://ccc106a8b57a53:18dcf77c8eee0e@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 #MAILER_DSN=smtp://ydbu3020:pZKq-LNAG-agV?@smtp.o2switch.net:587
-MAILER_DSN=smtp://buffon.o2switch.net:26
+MAILER_DSN=smtp://buffon.o2switch.net:587
 ###< symfony/mailer ###
